Fix navbar adaptation to resize. Now navbar wraps into a single menu item when resizing is done.

--- a/static/styles.css
+++ b/static/styles.css
@@ -12,7 +12,7 @@ body {
   top: var(--nav-padding-neg);
   left: var(--nav-padding-neg);
   position: fixed;
-  width: 110%;
+  width: 103%;
   z-index: 1000;
 }
 
@@ -32,6 +32,27 @@ body {
 .navbar ul li:hover {
   background-color: red;
   cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar ul li:not(:last-child) {
+    display: none;
+  }
+
+  #menuItem {
+    display: block;
+  }
+
+  #menuItem ul li {
+    display: block;
+    float: left;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .navbar ul li:last-child {
+    display: none;
+  }
 }
 
 .dropdown-content {
@@ -90,10 +111,10 @@ body {
 }
 
 .slide {
-z-index: -100;
-display: none;
-opacity: 0;
-animation: fader 10s;
+  z-index: -100;
+  display: none;
+  opacity: 0;
+  animation: fader 10s;
 }
 
 
